[gd_scene load_steps=42 format=3 uid="uid://dp660ag48wxkg"]

[ext_resource type="Script" uid="uid://dguhl1dglqedq" path="res://scripts/player.gd" id="1_qhqgy"]
[ext_resource type="Texture2D" uid="uid://bd32vh1mb823g" path="res://Art/Hugh Art/HughFungus_sprite.png" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://fsdvnbao0bkx" path="res://Art/Hugh Art/HughFungus_spinAttack_spritesheet.png" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://dor7v387pwfot" path="res://Art/Hugh Art/HughFungus_Jump_spritesheet.png" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://bhnqjcp0l2pp8" path="res://Art/Hugh Art/HughFungus_running_sprite.png" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://ig1ekf0rf18s" path="res://Art/Hugh Art/HughFungus_Falling_spritesheet.png" id="3_tuyoq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_qlg0r")
region = Rect2(575, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("2_qlg0r")
region = Rect2(1150, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("2_qlg0r")
region = Rect2(1725, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("2_qlg0r")
region = Rect2(2300, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("2_qlg0r")
region = Rect2(2875, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("2_qlg0r")
region = Rect2(3450, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("3_tuyoq")
region = Rect2(0, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("3_tuyoq")
region = Rect2(575, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("3_tuyoq")
region = Rect2(1150, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("3_tuyoq")
region = Rect2(1725, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("3_tuyoq")
region = Rect2(2300, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("3_tuyoq")
region = Rect2(2875, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("3_tuyoq")
region = Rect2(3450, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("3_tuyoq")
region = Rect2(4025, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_dqkch")
region = Rect2(0, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_dqkch")
region = Rect2(575, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_dqkch")
region = Rect2(1150, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("3_dqkch")
region = Rect2(1725, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_dqkch")
region = Rect2(2300, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("3_dqkch")
region = Rect2(2875, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_dqkch")
region = Rect2(3450, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_dqkch")
region = Rect2(4025, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_dqkch")
region = Rect2(4600, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("3_qhqgy")
region = Rect2(575, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("3_qhqgy")
region = Rect2(1150, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_qhqgy")
region = Rect2(1725, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(2300, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(2875, 0, 575, 575)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_qhqgy")
region = Rect2(3450, 0, 575, 575)

[sub_resource type="SpriteFrames" id="SpriteFrames_onrkg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}],
"loop": true,
"name": &"double_jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}],
"loop": true,
"name": &"falling",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_onrkg")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}],
"loop": true,
"name": &"jump",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"running",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqkch"]
radius = 37.01
height = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 45.748104

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 53.333332

[node name="player" type="CharacterBody2D" groups=["Player"]]
z_index = 2
scale = Vector2(0.3, 0.3)
script = ExtResource("1_qhqgy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_onrkg")
animation = &"falling"
frame = 5
frame_progress = 0.007072144

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.3333333, 10)
shape = SubResource("CapsuleShape2D_dqkch")

[node name="damage_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_area"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_onrkg")

[node name="pickup_detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickup_detector"]
shape = SubResource("CircleShape2D_qhqgy")

[node name="spawn_set_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="damage_area" to="." method="_on_damage_area_area_entered"]
[connection signal="area_exited" from="damage_area" to="." method="_on_damage_area_area_exited"]
[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="damage_area" to="." method="_on_damage_area_body_exited"]
[connection signal="area_entered" from="pickup_detector" to="." method="_on_pickup_detector_area_entered"]
[connection signal="timeout" from="spawn_set_timer" to="." method="_on_spawn_set_timer_timeout"]
